2010-02-20  Ozkan Sezer <sezeroz@gmail.com>

	* dvdmedia.h: added from the wine sources.
	* Sync'ed with wine-1.1.39 release version.

2010-02-14  Ozkan Sezer <sezeroz@gmail.com>

	* amaudio.h: quartz: Fix IAMDirectSound interface definition. (from
	wine git 28acc8398c58f0326d2e3bb21dd9406b9f480529 / 7 Feb 2010.)

	* d3dx9shader.h: Add definition for ID3DXConstantTable. (from wine
	git 6b890be5512e748412a0e21ed3f0329f1aef3057 / 11 Feb 2010)

2010-02-12  Ozkan Sezer <sezeroz@gmail.com>

	* dmoreg.h: Made it C++ compatible by adding extern "C" { ... }
	when __cplusplus ies defined.

2010-02-12  Ozkan Sezer <sezeroz@gmail.com>

	* added dmodshow, medparam and qnetwork *.idl and *.h files from the
	KDE project.
	* added amstream and vmr9 *.idl and *.h files from wine sources.

2010-02-12  Ozkan Sezer <sezeroz@gmail.com>

	Merged with the dx headers from wine-1.1.38 including the missing
	d3drmobj.h, mediaerr.h and mediaobj.h, as well as the new d3dx9
	additions.

2010-02-11  Ozkan Sezer <sezeroz@gmail.com>

	* dshow.h: Updated from wine-1.1.38.
	* amaudio.h, amvideo.idl, amvideo.h, audevcod.h, errors.h, evcode.h,
	vfwmsgs.h: Added missing dshow dependency headers from wine-1.1.38.

2010-02-11  Ozkan Sezer <sezeroz@gmail.com>

	* ddstream.h, docobj.h, downloadmgr.h: Regenerated using widl-1.1.38
	from the latest wine-1.1.38 *.idl files.
	* ddstream.idl, docobj.idl, downloadmgr.idl: Added as idl versions.

2010-02-03  Ozkan Sezer <sezeroz@gmail.com>

	* dinput.h: Add DISEQUENCE_COMPARE macro. (wine git, 23 Aug 2009,
	a0449a5f64934f6cadd274f6c9442dd72a87b1e8)
	* dinput.h: Fix _DIACTIONA and _DIACTIONW definitions to match PSDK
	(dwSemantic). (wine git e1d6e3b258278b0aa456e9ea7a34dcf56598298d)
	* dsound.h: Fix a dsound define (IDirectSound3DBuffer_SetConeAngles).
	(wine git, 19 Nov 2009, cd143fb5bf1c4f68b805c06ca33272132f20d653).
	Also fixed its !__cplusplus || CINTERFACE case which is missed in the
	wine repo.
